clusters/vps1/config/authelia/authelia-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
