clusters/vps1/config/authelia/ldap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  labels: 
    app: ldap
spec:
  selector:
    matchLabels: 
      app: ldap
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
      - name: lldap
        image: nitnelave/lldap:stable
        resources: 
          limits:
            memory: 125Mi
          requests:
            cpu: "0.25"
            memory: 50Mi
        ports:
        - name: ldap
          containerPort: 3890
          protocol: TCP
        - name: ldap-ui
          containerPort: 17170
          protocol: TCP
        volumeMounts:
          - name: ldap-data
            mountPath: /data
      volumes:
        - name: ldap-data
          persistentVolumeClaim:
            claimName: ldap
---
apiVersion: v1
kind: Service
metadata:
  name: ldap
spec:
  selector:
    app: ldap
  ports:
  - name: ldap
    protocol: TCP
    port: 3890
    targetPort: ldap
  - name: ldap-ui
    protocol: TCP
    port: 17170
    targetPort: ldap-ui
