clusters/vps1/config/authelia/authelia-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  hostnames:
  - auth.jkulzer.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: authelia
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
