clusters/vps1/config/authelia/authelia-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authelia
  namespace: authelia
spec:
  hosts:
  - "auth.jkulzer.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: authelia
        port:
          number: 80
