clusters/vps1/config/authelia/kyverno-copy-headscale-oidc-secret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-headscale-oidc-secret
  annotations:
    policies.kyverno.io/title: Sync headscale-oidc-secret secret from headscale to authelia namespace
    policies.kyverno.io/subject: Secret
    policies.kyverno.io/minversion: 1.6.0
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
  - name: sync-image-pull-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      apiVersion: v1
      kind: Secret
      name: headscale-oidc-secret
      namespace: authelia
      synchronize: true
      clone:
        name: headscale-oidc-secret
        namespace: headscale
